[package]
name = "executor"
version = "0.1.0"
authors = ["Nicholas Ung <support@snowplowanalytics.com>"]

[dependencies]
log = "0.3"
log4rs = "0.6"
docopt = "0.7"
lazy_static = "0.2"
regex = "0.2"
uuid = { version = "0.4", features = ["serde", "v4"] }
threadpool = "1.3"
iron = "0.5"
router = "0.5"
bodyparser = "0.6"
persistent = "0.3"
logger = "0.3"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
